Bug 448 alignment tweak (#459)
* Do not remove margin/padding from deepest elements

The extra layer of matching catches the first star and the
"previous" button. That causes them to be narrower than their
siblings.

* Fix pixel alignment of widget centres in menu

There must be a better way, but this works!

--- a/src/stylesheet.css
+++ b/src/stylesheet.css
@@ -1,8 +1,17 @@
 .panel-media-indicator .popup-sub-menu > * > * > :first-child,
-.panel-media-indicator .popup-sub-menu > * > * > :last-child > :first-child,
-.panel-media-indicator .popup-sub-menu > * > * > :last-child > :first-child > :first-child {
+.panel-media-indicator .popup-sub-menu > * > * > :last-child > :first-child {
     margin:  0;
     padding: 0;
+}
+
+/*
+ * This is ugly, but seems to work - narrow the "spacer"/alignment boxes
+ *
+ * The other option would be negative margins, but that
+ * breaks things.
+ */
+.panel-media-indicator .popup-sub-menu > * > * > :first-child {
+    width: 14px;
 }
 
 .player-buttons {
